# VoxelShaft

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CompileWithClang.bat  LICENSE  Main.cpp  README.md  Recipe-Spelunker.sln  Recipe-Spelunker.vcproj  rebuild.bat
RecipeSpelunker/: Manager.hpp  Plugin.hpp  Server.hpp
RecipeSpelunker/Utility/: Cloneable.hpp  Exception.hpp  List.hpp  String.hpp  Types.hpp
RecipeSpelunker/Vanilla/LacewingServerPlugin/: LacewingServer.hpp  LacewingServerPlugin.cpp  LacewingServerPlugin.hpp
config/: client.json  server.json
include/voxsh/res/: Resource.hpp  Value.hpp
include/voxsh/server/: Server.hpp
include/voxsh/util/: TMP.hpp
plugins [temp]/test/: permissions.json
res/: menu text.json
src/client/: main.cpp
src/common/util/: optimal_size.hpp
src/server/: Server.hpp  main.cpp
src/util/: Cloneable.hpp
src/voxsh/: main.cpp
src/voxsh/server/: Server.cpp  Server.hpp
